# owl_engine

./: .gitignore  LICENSE  README.md
src/: .clang-format  CMakeLists.txt  engine.cpp  engine.h  main.cpp  vulkan_engine.cpp  vulkan_engine.h  vulkan_window.cpp  vulkan_window.h
src/owlModel/: CMakeLists.txt  mesh.h  texture.h  vertex.h
src/owlVulkan/: CMakeLists.txt  buffer.cpp  buffer.h  command_buffers.cpp  command_buffers.h  command_pool.cpp  command_pool.h  debug_messenger.cpp  debug_messenger.h  descriptor_pool.cpp  descriptor_pool.h  descriptor_set_layout.cpp  descriptor_set_layout.h  descriptor_sets.cpp  descriptor_sets.h  device_memory.cpp  device_memory.h  fence.cpp  fence.h  framebuffer.cpp  framebuffer.h  graphics_pipeline.cpp  graphics_pipeline.h  image.cpp  image.h  image_view.cpp  image_view.h  instance.cpp  instance.h  logical_device.cpp  logical_device.h  matrix.h  mesh.h  physical_device.cpp  physical_device.h  pipeline.cpp  pipeline.h  pipeline_layout.cpp  pipeline_layout.h  queue_families_indices.cpp  (+20 more)
src/owlVulkan/core/: buffer.cpp  buffer.h  command_buffers.cpp  command_buffers.h  command_pool.cpp  command_pool.h  debug_messenger.cpp  debug_messenger.h  descriptor_pool.cpp  descriptor_pool.h  descriptor_set_layout.cpp  descriptor_set_layout.h  descriptor_sets.cpp  descriptor_sets.h  device_memory.cpp  device_memory.h  fence.cpp  fence.h  framebuffer.cpp  framebuffer.h  graphics_pipeline.cpp  graphics_pipeline.h  image.cpp  image.h  image_view.cpp  image_view.h  instance.cpp  instance.h  logical_device.cpp  logical_device.h  physical_device.cpp  physical_device.h  pipeline.cpp  pipeline.h  pipeline_layout.cpp  pipeline_layout.h  render_pass.cpp  render_pass.h  sampler.cpp  sampler.h  (+13 more)
src/owlVulkan/helpers/: file_helpers.cpp  file_helpers.h  vulkan_collections_helpers.cpp  vulkan_collections_helpers.h  vulkan_helpers.cpp  vulkan_helpers.h
src/resources/shaders/: passthrough.frag  passthrough.vert
tools/: compile_shaders.ps1
